syntax = "proto3";
package common.teos.v2;

message RegisterRequest {
    // Requests a user registration with the tower. Contains the user id in the form of a compressed ECDSA public key.
  
    bytes user_id = 1;
  }
  
  message RegisterResponse {
    // Response to a RegisterRequest, contains the registration information alongside the tower signature of the agreement.
  
    bytes user_id = 1;
    uint32 available_slots = 2;
    uint32 subscription_start = 3;
    uint32 subscription_expiry = 4;
    string subscription_signature = 5;
  }

message PayRequest {
  // Requests an invoice from the tower so that the user can make a payment.

  bytes user_id = 1;
}

message PayResponse {
  // Response to a PayRequest containing an invoice for the client to pay.

  bytes user_id = 1;
  string invoice = 2;
}

  message GetSubscriptionInfoRequest {
    // Request to get a specific user's subscription info.

    string signature = 1;
}

message GetSubscriptionInfoResponse {
  // Response with the information the tower has about a specific user

  uint32 available_slots = 1;
  uint32 subscription_expiry = 2;
  repeated bytes locators = 3;
}
